<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.voipgrid.vialer.onboarding.LoginFragment"
    android:id="@+id/fragment_account"
    >
    <TextView
        android:id="@+id/title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/HeaderTitleTextViewStyle"
        android:text="@string/configure_header_label_text"
        />
    <TextView
        android:id="@+id/subtitle_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/title_label"
        style="@style/HeaderSubTitleTextViewStyle"
        android:text="@string/configure_header_label_subtext"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobile_number_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:layout_below="@id/subtitle_label"
        >
        <EditText
            android:id="@+id/mobileNumberTextDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phonenumber_edittext_hint"
            android:inputType="phone"
            android:drawableRight="@drawable/ic_info_outline_white_24dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outgoing_number_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobile_number_field"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        >
        <EditText
            android:id="@+id/outgoingNumberTextDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/outgoingnumber_edittext_hint"
            android:inputType="phone"
            android:enabled="false"
            android:focusable="false"
            style="@style/OnboardingEditTextStyle"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_configure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/outgoing_number_field"
        android:enabled="false"
        android:text="@string/configure_button_title"
        />
</RelativeLayout>
