...
    <string name="login_header_label_text">Business calls in the cloud</string>
    <string name="login_header_label_subtext">in the cloud</string>
    <string name="password_edittext_hint">Password</string>
    <string name="email_edittext_hint">Email Address</string>
    <string name="username_edittext_hint">Username</string>
    <string name="forgot_password_button_title">Forgot password</string>
    <string name="login_button_title">login</string>
    <string name="login_missing_field_title">Warning</string>
    <string name="login_missing_field_message">Please fill in all fields before login!</string>
    <string name="change_password_webview_toast">To make use of the app, you need to login once and change your password</string>


    <!-- Forgot password fragment values -->
...
    <string name="voip_account_missing_title">Missing \n VoIP Account</string>
    <string name="voip_account_missing_text">You do not currently have a VoIP account linked to your user, this is necessary to be able to make and receive calls via VoIP.\n\nIf you do not intend to use VoIP and only wish to use the management and/or two-step calling features then you may skip this step.</string>

    <!-- Welcome fragment values -->
    <string name="welcome_text">Welcome to Vialer,\n\n%1$s!</string>
    <string name="placeholder_name">Nameless user</string>
    <string name="start_calling_button">Get started</string>
    <string name="onboarding_login_failed_title">Login failed</string>
    <string name="onboarding_login_failed_message">Please try again.</string>
    <string name="onboarding_login_failed_too_many_attempts_title">Too many attempts</string>
    <string name="onboarding_login_failed_too_many_attempts_message">Please try again soon.</string>
    <string name="onboarding_no_internet_message">An internet connection is required.</string>
    <string name="onboarding_account_configure_failed_title">Configuration failed</string>
...
