<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.voipgrid.vialer.onboarding.LogoFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/background_gradient">
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:progressTint="@color/progress_bar_color"
            android:visibility="invisible"
            android:indeterminate="true"/>
    </FrameLayout>
</ScrollView>
