<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialpad_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:weightSum="4">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.voipgrid.vialer.dialer.DialpadButton
            android:id="@+id/dialpadButton1"
            style="@style/DialpadButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            app:digit="1" />

        <com.voipgrid.vialer.dialer.DialpadButton
            android:id="@+id/dialpadButton2"
            style="@style/DialpadButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            app:chars="abc"
            app:digit="2" />

        <com.voipgrid.vialer.dialer.DialpadButton
            android:id="@+id/dialpadButton3"
            style="@style/DialpadButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            app:chars="def"
            app:digit="3" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.voipgrid.vialer.dialer.DialpadButton
            android:id="@+id/dialpadButton4"
            style="@style/DialpadButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            app:chars="ghi"
            app:digit="4" />

        <com.voipgrid.vialer.dialer.DialpadButton
            android:id="@+id/dialpadButton5"
            style="@style/DialpadButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            app:chars="jkl"
            app:digit="5" />

        <com.voipgrid.vialer.dialer.DialpadButton
            android:id="@+id/dialpadButton6"
            style="@style/DialpadButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            app:chars="mno"
            app:digit="6" />

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.voipgrid.vialer.dialer.DialpadButton
            android:id="@+id/dialpadButton7"
            style="@style/DialpadButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            app:chars="pqrs"
            app:digit="7" />

        <com.voipgrid.vialer.dialer.DialpadButton
            android:id="@+id/dialpadButton8"
            style="@style/DialpadButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            app:chars="tuv"
            app:digit="8" />

        <com.voipgrid.vialer.dialer.DialpadButton
            android:id="@+id/dialpadButton9"
            style="@style/DialpadButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            app:chars="wxyz"
            app:digit="9" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.voipgrid.vialer.dialer.DialpadButton
            android:id="@+id/dialpadButtonAsterisk"
            style="@style/DialpadButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            app:digit="*" />

        <com.voipgrid.vialer.dialer.DialpadButton
            android:id="@+id/dialpadButton0"
            style="@style/DialpadButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            app:chars="+"
            app:digit="0" />

        <com.voipgrid.vialer.dialer.DialpadButton
            android:id="@+id/dialpadButtonHash"
            style="@style/DialpadButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            app:digit="#" />


    </TableRow>

</TableLayout>