...
        android:id="@+id/button_audio_source"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        app:image="@drawable/ic_speaker"
        app:label="@string/speaker_label"
        app:layout_constraintBottom_toBottomOf="@+id/button_mute"
        app:layout_constraintEnd_toStartOf="@+id/button_mute"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_mute"
        app:layout_constraintVertical_chainStyle="packed" />

...
        android:id="@+id/button_hold"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="32dp"
        app:image="@drawable/ic_pause"
        app:label="@string/onhold_label"
        app:layout_constraintBottom_toTopOf="@+id/button_hangup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_transfer"
        app:layout_constraintTop_toBottomOf="@+id/button_mute" />

    <com.voipgrid.vialer.call.HangupButton
        android:id="@+id/button_hangup"
...
