<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.voipgrid.vialer.dialer.NumberInputView
        android:id="@+id/number_input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_weight="1">

        <com.voipgrid.vialer.dialer.KeyPadView
            android:id="@+id/key_pad_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.85"
            android:gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.15"
            android:orientation="vertical">
            <com.voipgrid.vialer.dialer.CallButton
                android:id="@+id/button_call"
                android:layout_width="@dimen/call_buttons_width"
                android:layout_height="@dimen/call_buttons_width"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/call_pickup_button"
                app:srcCompat="@drawable/ic_call_white" />
    </LinearLayout>

    </LinearLayout>

</LinearLayout>
